Efmub-Ogy/src/objects/Flight_Staff__c.object
<CustomObject>
    <description>Represents a Delta employee related to a Flight Leg - flight crew, gate agent, etc.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Flight Staff</relationshipLabel>
        <relationshipName>Flight_Staff</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BsAssgn__c</fullName>
        <label>BsAssgn</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmplDt__c</fullName>
        <label>EmplDt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FADeptNb__c</fullName>
        <label>FADeptNb</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAFsmBase__c</fullName>
        <label>FAFsmBase</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAFsmId__c</fullName>
        <label>FAFsmId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Leg_Flight_Crew__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flight Leg Flight Crew</label>
        <referenceTo>Flight_Leg__c</referenceTo>
        <relationshipLabel>Flight Crew</relationshipLabel>
        <relationshipName>Flight_Crew</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flight_Leg_Gate_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flight Leg Gate Agent</label>
        <referenceTo>Flight_Leg__c</referenceTo>
        <relationshipLabel>Gate Agents</relationshipLabel>
        <relationshipName>Gate_Agents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MgrFrstNm__c</fullName>
        <label>MgrFrstNm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MgrLstNm__c</fullName>
        <label>MgrLstNm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MgrNb__c</fullName>
        <label>MgrNb</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SnrtyDt__c</fullName>
        <label>SnrtyDt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SnrtyNb__c</fullName>
        <label>SnrtyNb</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bsCd__c</fullName>
        <label>bsCd</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crrCd__c</fullName>
        <label>crrCd</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crrnLgTypCd__c</fullName>
        <label>crrnLgTypCd</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>destArptCd__c</fullName>
        <label>destArptCd</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eqpTypCd__c</fullName>
        <label>eqpTypCd</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fltArrDt__c</fullName>
        <label>fltArrDt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fltArrTm__c</fullName>
        <label>fltArrTm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fltCrrCd__c</fullName>
        <label>fltCrrCd</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fltDestArptCd__c</fullName>
        <label>fltDestArptCd</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fltDprtDt__c</fullName>
        <label>fltDprtDt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fltDprtTm__c</fullName>
        <label>fltDprtTm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fltDt__c</fullName>
        <label>fltDt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fltIntlCd__c</fullName>
        <label>fltIntlCd</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fltNb__c</fullName>
        <label>fltNb</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fltOrigArptCd__c</fullName>
        <label>fltOrigArptCd</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fltSchdArrDt__c</fullName>
        <label>fltSchdArrDt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fltSchdArrTm__c</fullName>
        <label>fltSchdArrTm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fltSchdDprtDt__c</fullName>
        <label>fltSchdDprtDt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fltSchdDprtTm__c</fullName>
        <label>fltSchdDprtTm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fltSchdDprtUtcDt__c</fullName>
        <label>fltSchdDprtUtcDt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fltTm__c</fullName>
        <label>fltTm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ibFltArrDtTm__c</fullName>
        <label>ibFltArrDtTm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ibFltNb__c</fullName>
        <label>ibFltNb</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>incnlFaCt__c</fullName>
        <label>incnlFaCt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isShowPsptNm__c</fullName>
        <label>isShowPsptNm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lckd__c</fullName>
        <label>lckd</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mbrCtrt__c</fullName>
        <label>mbrCtrt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mbrIdNb__c</fullName>
        <label>mbrIdNb</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mbrNm__c</fullName>
        <label>mbrNm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mbrPsptNm__c</fullName>
        <label>mbrPsptNm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mbrTypCd__c</fullName>
        <label>mbrTypCd</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>minFaRqdCt__c</fullName>
        <label>minFaRqdCt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>origArptCd__c</fullName>
        <label>origArptCd</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>originating__c</fullName>
        <label>originating</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pstnCd__c</fullName>
        <label>pstnCd</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rotnBegDt__c</fullName>
        <label>rotnBegDt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rotnDupNb__c</fullName>
        <label>rotnDupNb</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rotnNb__c</fullName>
        <label>rotnNb</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rotnPstnCd__c</fullName>
        <label>rotnPstnCd</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Flight Staff</label>
    <nameField>
        <displayFormat>FS{00000000}</displayFormat>
        <label>Flight Staff Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Staff</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>